# Armory-Protocol

./: .gitignore  GIST.md  Procfile  README.md  conversation.md  report.md
armory/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
armory-extension/: README.md  armory.js  background.js  content.js  manifest.json  popup.html  popup.js  styles.css
armory/Armory-Build/: pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
armory/Armory-Build/artifacts/armory-protocol/: index.html  package.json  vite.config.ts
armory/Armory-Build/artifacts/armory-protocol/.replit-artifact/: artifact.toml
armory/Armory-Build/attached_assets/: Pasted-Build-a-beautiful-complete-Next-js-14-UI-for-a-product-_1780915412064.txt  Pasted-Build-a-single-page-marketing-website-for-Armory-Protoc_1780914963337.txt
armory/app/: worker.ts
armory/app/frontend/: config-overrides.js  package-lock.json  package.json
armory/app/frontend/public/: index.html
armory/app/frontend/src/: App.tsx  index.css  index.tsx
armory/programs/armory_protocol/: Cargo.toml
armory/programs/armory_protocol/src/: constants.rs  errors.rs  events.rs  expire.rs  initialize.rs  lib.rs  query.rs  register.rs  revoke.rs  update_verifier.rs  verify.rs
armory/programs/armory_protocol/src/state/: entity_record.rs  mod.rs  registry_config.rs
armory/scripts/: deploy-devnet.sh  initialize-devnet.ts  seed-devnet.ts  smoke-test.ts  verify-deployment.ts
armory/tests/: armory_auth.ts  armory_edge.ts  armory_expire.ts  armory_happy.ts  armory_revoke.ts  armory_unverified.ts  utils.ts
(+18 files in other folders)
